# Minute_Mind-Project

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  app.py  main.py  pyproject.toml  requirements.txt
files/: .gitkeep  MoM_11.docx  MoM_12.docx  MoM_13.docx  MoM_14.docx  MoM_15.docx  MoM_16.docx  MoM_17.docx  MoM_18.docx  MoM_1_Meeting_2025-11-26T1759262492450000.docx  MoM_2_20251127_231125.docx  MoM_2_Meeting_2025-11-27T0532387343130000.docx  MoM_4_20251128_010212.docx  MoM_6_20251128_092849.docx  MoM_8.docx  MoM_8_20251128_112134.docx  MoM_8_20251128_115714.docx  MoM_8_20251128_122712.docx  MoM_8_20251128_123841.docx  MoM_8_20251128_125214.docx  MoM_8_20251128_130659.docx  MoM_8_20251128_180430.docx  MoM_9.docx  MoM_dinner time.docx  MoM_dinner_time.docx
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: conflicts.js  http.js  meetings.js  tasks.js
frontend/src/pages/: ConflictDetection.jsx  Dashboard.jsx  Login.jsx  NewMeeting.jsx  PastMeetings.jsx  Settings.jsx  Summary.jsx  TaskAssigned.jsx
instance/: mom.db
static/css/: style.css
static/js/: main.js
templates/: base.html  dashboard.html  login.html  new_meeting.html  past_meetings.html  settings.html  summary.html
utils/: mom_generator.py  temporal_normalization.py
